# DeportesMAD

./: .gitignore  CMakeLists.txt  README.md
data/: .~lock.dataset.csv#  README.md
include/: README.md  busqueda.h  config.h.in  lector.h  listas.h
src/: README.md  busqueda.c  lector.c  listas.c  main.c
